--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
-node_modules
 .env
-persons.json
+
+node_modules
+dist/
+
 generated/*
 !generated/.gitkeep
-dist/
+
+config/*
+!config/*.example.json
